<resources>
    ------------------------------------------------------------------------------------------------
    <!-- ACTION BARS -->
    <!-- Main -->
    <string name="actnbrMain"> Cyber Lock </string>
    <!-- Edits -->
    <string name="actnbrMemoEdit"> Memo Edit </string>
    <string name="actnbrPaymentInfo"> Card Edit </string>
    <string name="actnbrLoginInfo"> Login Edit </string>
    <!-- Connect -->
    <string name="actnbrBugReport"> Bug Report </string>
    <!-- Connect -->
    <string name="actnbrSettings"> Settings </string>
    <string name="actnbrAbout"> About </string>
    ------------------------------------------------------------------------------------------------
    <!-- MAINS -->
    ------------------------------------------------------------------------------------------------
    <!-- LOGIN AND REGISTRATION -->
    <!--REGISTRATION-->
    <string name="NewPin">Please input a new pin</string>
    <string name="ConfirmPin">Please confirm pin</string>
    ------------------------------------------------------------------------------------------------
    <!-- ACTIVITY EDITS-->
    <!-- CONTENT ARRAYS -->
    <string-array name="CardType_array">
        <item>None</item>
        <item>Visa</item>
        <item>Master Card</item>
        <item>American Express</item>
        <item>Discover</item>
        <item>Other</item>
    </string-array>
    ------------------------------------------------------------------------------------------------
    <!-- CYBER LOCK SETTINGS ARRAY -->
    <!-- Auto Logout Delay -->
    <string-array name="AutoLogoutDelay_array">
        <item>Immediate</item>
        <item>15 Seconds</item>
        <item>30 Seconds</item>
        <item>1 Minute</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>Never</item>
    </string-array>
    <!-- Encryption Algorithms -->
    <string-array name="CryptALGO_array">
        <item>AES - 256</item>
        <item>Blowfish - 448</item>
        <!-- Rest of the encryption features
        <item>RC4 – 256</item>
        <item>Triple DES - 168</item>
        -->
    </string-array>
    ------------------------------------------------------------------------------------------------
    <!-- SHORT TEXT -->
    <!-- APP STATE DATA -->
    <!-- URLs -->
    <string name="SiteURL">http://bitcoretechnologies.net/</string>
    ------------------------------------------------------------------------------------------------
    <!-- PARAGRAPHS -->
    <!-- SETTINGS -->
    <!-- ALERT DIALOGS -->
    <string name="AlertDialog_ScrambleKey">
        On selecting Scramble, ALL your content will be momentarily decrypted and re-encrypted with
        the new key and selected algorithm. Please wait for the process to be completed and response
        message to be successful. Once the process has started you will not be able to cancel it.
        Additionally and most importantly, do not exit or close the application during the process
        as it may result in data loss.
    </string>
    <string name="AlertDialog_EncryptionMethodChange">
        On pressing continue you content will be momentarily decrypted and re-encrypted using the
        new encryption algorithm. Please wait for the process to be completed and response message
        to be successful. Once the process has started you will not be able to cancel it.
        Additionally and most importantly, do not exit or close the application during the process
        as it may result in data loss.
    </string>
    <!-- CONTRIBUTE -->
    <string name="MessageToUserTitle">Message To User</string>
    <string name="MessageToUser">
        Hello user, Welcome to Cyber Lock! To begin, privacy and security is very important to me,
        with the increasing attacks on privacy and security, I decided to create an application for
        mobile device to store data as of now locally but most importantly securely. This is my personal,
        private ongoing encryption application project. This is my take on trying to make mobile
        application software and security more noticeably intertwined. I spend many hours researching,
        designing and developing. I very much hope to continue my project and bring constant updates
        to upgrade and improve Cyber Lock. I plan on implementing many other features and options to
        give you, the user, more control over how you keep your data safe. Furthermore, I am constantly
        experimenting with visuals to provide cleaner looks and overall greater practicality. I believe
        in simplicity, power, reliability, but greatest of all, an uncompromising balance of security
        and privacy!
    </string>
    <string name="Sincerely">Sincerely,</string>
    <string name="Signature">GG.</string>
    <string name="CheckoutSite">
        Click here  to check out our site! \n\n{ http://bitcoretechnologies.net/ } </string>
    <!-- ABOUT -->
    <string name="CyberLocksTechTitle">Cyber Lock\'s Technology</string>
    <string name="CyberLocksTech">
        Cyber Lock is a mobile application designed to secure and privatize your personal information.
        Cyber Lock is equipped to utilize four different symmetric Encryption Algorithms; AES, Blowfish,
        RC4 and Triple DES. Pins are protected using a salted SHA-256 algorithm, a powerful one-way
        hash function that cannot be decrypted.
    </string>
    <string name="AES">AES</string>
    <string name="AESInfo">
        Advanced Encryption Standard (AES) is a newer and stronger encryption standard, which uses
        the Rijndael algorithm. This algorithm was developed by Joan Daemen and Vincent Rijmen of
        Belgium. AES has a block size of 128 and is able to use 128, 192, and 256-bit keys for
        powerful encryption.
    </string>
    <string name="Blowfish">Blowfish</string>
    <string name="BlowfishInfo">
        Blowfish is a symmetric block cipher, designed by Bruce Schneier.
        Blowfish has a 64-bit block size and a variable key length from 32 up to 448 bits.
    </string>
    <string name="SHA256">SHA-256</string>
    <string name="SHA256Info">
        SHA-256 (Secure Hash Algorithm), a cryptographic function which takes an input and spits
        out an alphanumeric string. SHA-256 generates an almost-unique, fixed 256-bit hash. A hash
        is a one way function “encryptor” which cannot be decrypted. SHA-256 is currently one of
        the strongest functions available.
    </string>
    <!-- BUG REPORT -->
    <string name="WhereBRGoes">This report will be sent straight to the developer for reviewing.</string>
    ------------------------------------------------------------------------------------------------
    <!-- UPDATE FEED -->
    <string name="CurrentVersion">Version 1.0.0</string>
    <string name="UpdateTitle">Update Board</string>
    <!-- Version 1.1-->
    <string name="V1.0.0">V - 1.0.0 ( Release! )</string>
    <string name="Update_V1.0.0">
        Welcome to Cyber Lock! Initial release comes outfitted with a data,
        card info, login credential and playground encryptor. Content Algorithms
        currently supported are AES-256 and Blowfish-448 bit.
    </string>
    ------------------------------------------------------------------------------------------------
    <!-- DRAWER STATES -->
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    ------------------------------------------------------------------------------------------------
    <!-- TEXT INPUT LAYOUT FIX -->
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
</resources>
