<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gerardogandeaga.cyberlock.Activitys.Activities.Menus.Contribute">

    <include
        android:id="@+id/include"
        layout="@layout/child_toolbar"/>

    <ScrollView
        android:id="@+id/Data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include"
        android:layout_above="@+id/Actions">

        <LinearLayout
            android:id="@+id/Letter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/MessageToUserTitle"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvContributeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/MessageToUser"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvSincerely"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/Sincerely"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvGG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/Signature"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnURL"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/clickable_background_listitem"
                android:fontFamily="monospace"
                android:padding="10dp"
                android:text="@string/CheckoutSite"
                android:textAllCaps="false"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/Actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="?attr/colorAccent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnDonate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/clickable_scheme"
            android:clickable="true"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_action_donate"/>

        <ImageButton
            android:id="@+id/btnRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/clickable_scheme"
            android:clickable="true"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_action_rate"/>

        <ImageButton
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/clickable_scheme"
            android:clickable="true"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_action_share"/>

    </LinearLayout>

</RelativeLayout>
